[package]
authors = ["thor <thorck@protonmail.com>"]
description = """"""
edition = "2021"
license = "Unlicense OR MIT"
name = "async-playround"
repository = "https://github.com/thor314/async-playround"
version = "0.1.0"

[dependencies]
# Binary
clap = { version = "3.2", features = ["derive"] }
dotenv = "0.15"                                         # .env file parsing
validator = { version = "0.16", features = ["derive"] }
# Common
# optional => can use in a feature, otherwise, ignored; remove optional to use normally.
cfg-if = { version = "1.0.0", optional = true }                   # branching compilation logic
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# https://rhai.rs/book/start/features.html
cute = { version = "0.3" }                    # python-like list comprehensions
rhai = { version = "1.8.0", optional = true } # scripting lanugage, yeet

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async dependencies
futures = { version = "0.3", features = ["executor", "thread-pool"] }
tokio = { version = "1.20", features = ["full"] }
tokio-stream = { version = "0.1.9" }

# Logging
actix = "0.13.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures-lite = "1.12.0"
merge-streams = "0.1.2"
cap = "0.1.0"

# Your dependencies
kiam = "0.1.1"         # macro for prettier conditionals: when!


[features]
some_feature = [
  "dep:serde",
  "dep:serde_json",
] # use this to use optional dependencies

[dev-dependencies]
# Bench
criterion = "0.4"
iai = "0.1"       # criterion alternative
# Testing utils
arbitrary = { version = "1.1", features = ["derive"] }
quickcheck = "1.0"
quickcheck_macros = "1"                                                        # derive 
rstest = "0.15"
test-log = { version = "0.2", default-features = false, features = ["trace"] }

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
harness = false
name = "bench"
