[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""async-playground"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="async-playground"
repository ="https://github.com/thor314/async-playground"
version    ="0.1.0"

[dependencies]
anyhow            ="1.0"
tracing           ="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
thiserror         ="1.0"
env_logger        ="0.11"
dotenv            ="0.15"
[dev-dependencies]
rstest="0.18" # testing convenience proc-macros
