[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""async-playground"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="async-playground"
repository ="https://github.com/thor314/async-playground"
version    ="0.1.0"

[dependencies]
anyhow            ="1.0"
tracing           ="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio = { version = "1.20", features = ["full"] }
# tokio-stream = "0.1.14"
futures = "0.3"
thiserror         ="1.0"
env_logger        ="0.11"
dotenv            ="0.15"
cute = "0.3.0"
actix = "0.13.2"
bytes = "1.5.0"
mini-redis = "0.4.1"
pin-project = "1.1.4"
[dev-dependencies]
rstest="0.18" # testing convenience proc-macros
